--- a/app-inbox.html
+++ b/app-inbox.html
@@ -79,7 +79,7 @@
                                                 <i class="icon-like text-success"></i>
                                             </div>
                                             <div class="media-body">
-                                                <p class="text">Your New Campaign <strong>Holiday Sale</strong> is approved.</p>
+                                                <p class="text">Your New Campaign <strong>Holiday Sales</strong> is approved.</p>
                                                 <span class="timestamp">11:30 AM Today</span>
                                             </div>
                                         </div>
